--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "dependencies": {
     "cerebro-tools": "^0.1.8",
-    "cerebro-ui": "^0.0.16"
+    "cerebro-ui": "^0.0.16",
+    "p-debounce": "^1.0.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "cerebro-scripts": "0.0.25"
