--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.10",
     "md5": "^2.2.1",
     "p-debounce": "^1.0.0",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "react-sound": "^1.2.0"
   },
   "devDependencies": {
     "cerebro-scripts": "0.0.25"
